Thu Sep  9 00:21:32 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* unix/dev.c (__fsopen): give error EISDIR when directory is opened
	for O_RDWR.  Reported by John-Mark Bell.
	* Makefile.am: Removed unexisting sys/netdb.h for install.  Avoid
	creating emtpy resolv include subdirectory.

Thu Aug 26 03:36:17 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* unix/getenv (__intenv): Move to...
	* unix/pipe.c: ...here.  Changed return type to unsigned int.
	(pipe): Follow return tyep change.
	* incl-local/internal/unix.h (__intenv): Remove prototype.
	* vscript (__intenv): Remove.
	* unix/getenv.c: Moved remaining part to...
	* unix/ul_getenv.c: ...here.
	* unix/setenv.c (__addenv_to_os): Moved to common/env.c as new file.
	(__remenv_from_os): Likewise.
	(unsetenv): Moved to unix/ul_unsetenv.c.  Tail call __remenv_from_os.
	(clearenv): Moved to unix/ul_clearenv.c.
	Moved remaining part to...
	* unix/ul_setenv.c: ...here.
	* unix/putenv.c: Move to...
	* unix/ul_putenv.c: ...here. Minor cleanup.
	* unix/scl_setenv.c: Added.
	* unix/scl_unsetenv.c: Likewise.
	* unix/scl_putenv.c: Likewise.
	* test/env/basicenvtest.c: Added.

Sun Aug  1 22:43:42 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* include/sys/time.h (__itimer_which_t): Added for C++ support.
	(getitimer, setitimer): enum __itimer_which -> __itimer_which_t.
	(setitimer): Add __restrict.
	(utimes): Add __nonnull.
	* time/getitmr.c (getitimer): enum __itimer_which -> __itimer_which_t.
	* time/setitmr.c (setitimer): Likewise.

Thu Jul 22 16:16:53 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* unix/custom.c (__unixlib_getdev): Made static.
	(__customstat,__customfstat,__customlstat): Remove.
	Source cleanup.
	* unix/ul_select.c (select): Unconstify.
	* unix/scl_select.c: Add include sys/socket.h.
	* unix/ttyname_r.c: Add include string.h.
	* unix/dev.c: Directly route __customstat/__customfstat/__customlstat
	to __nullstat/__nullfstat/__nullstat.
	* time.time.c: Add include internal/local.h.